# basic-io

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: condition.bas  counting_up.bas  primes.bas
include/: ast.h  basic.h  http.h  queue.h  stack.h  tcpserver.h  utils.h
lib/basic/: CMakeLists.txt
lib/basic/include/basic/: ast.h  basic.h  basic_lexer.h  basic_parser.h  basic_program.h  basic_runner.h  basic_runtime_builtin_functions.h  basic_token.h
lib/basic/src/: ast.c  basic_lexer.c  basic_parser.c  basic_program.c  basic_runner.c  basic_runtime_builtin_functions.c  utils.c  utils.h
lib/basic_system/: CMakeLists.txt
lib/basic_system/include/basic_system/: system.h
lib/basic_system_interface/: CMakeLists.txt
lib/basic_system_interface/include/basic_system_interface/: system.h
lib/basic_system_interface/src/: system.c
lib/data_structures/: CMakeLists.txt
lib/data_structures/include/data_structures/: queue.h  stack.h
lib/data_structures/src/: queue.c  stack.c
lib/http/: CMakeLists.txt
lib/http/include/tcpserver/: tcpserver.h
lib/http/src/: http.c  tcpserver.c
lib/utility/: CMakeLists.txt
lib/utility/include/utility/logging/: logging.h
lib/utility/src/: logging.c  platform.c  utils.c
src/: ast.c  basic_lexer.c  basic_parser.c  basic_program.c  basic_runner.c  http.c  http.h  http_server_main.c  main.c  queue.c  stack.c  tcpserver.c  tcpserver.h  test_ast.c  utils.c  utils.h
src/platform/: platform.c  platform.h
static/: basic.js  index.html
